# url-shortener

./: .gitignore  README.md  app.py  kill_gunicorn.sh  pyproject.toml  requirements.txt  run.py  run_tests.ps1  run_tests.sh  setup.ps1  setup.sh  start_gunicorn.ps1  start_gunicorn.sh  test_main.py
scripts/unix/: kill_gunicorn.sh  run_tests.sh  setup.sh
scripts/windows/: kill_gunicorn.ps1  run_tests.ps1  setup.ps1
templates/: base.html  home.html  page_not_found.html  your_url.html
tests/: conftest.py  test_main.py
urlshort/: __init__.py  app.py  config.py  urlshort.py
urlshort/templates/: base.html
