[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "urlshort"
version = "0.1.0"
description = "Simple Flask URL shortener"
authors = [{name = "URL Shortener Maintainers"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
]

[tool.setuptools]
packages = ["urlshort"]
