[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urlshort"
version = "0.1.0"
description = "Simple Flask URL shortener"
readme = "README.md"
requires-python = ">(=3.10"
authors = [{name = "URL Shortener Maintainers"}]
license = { file = "LICENSE" }
keywords = ["flask", "url", "shortener"]
dependencies = [
  "Flask>=3.0,<4.0",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Flask",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<8",
]

[project.urls]
Homepage = "https://github.com/matedevlab/url-shortener"
Repository = "https://github.com/matedevlab/url-shortener"
BugTracker = "https://github.com/matedevlab/url-shortener/issues"

[tool.setuptools]
packages = ["urlshort"]
